New shoulds added

--- a/Documentatie/latex/Documentatie.tex
+++ b/Documentatie/latex/Documentatie.tex
@@ -110,7 +110,7 @@ style=apa,
             \hline
             VC08 & Bekertje bepaalt en publiceert zijn positie. & Must & \checkmark \\
             \hline
-            VC09 & Bekertje bepaalt en publiceert zijn snelheid. & Should & \checkmark \\
+            VC09 & Bekertje bepaalt en publiceert zijn snelheid. & Should & $\times$ \\
             \hline
 
         \end{tabularx}
@@ -165,7 +165,7 @@ style=apa,
             \hline
             DD03 &  & Could & $\times$ \\
             \hline
-            DD04 &  & Should & $\times$ \\
+            DD04 & De API is beschreven in Hoofdstuk Commando's & Should & \checkmark \\
             \hline
         \end{tabularx}
         \caption{Requirements tabel}
